# EZ-Panel

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.prod  LICENSE  MANIFEST.in  Makefile  README.md  check_env.sh  docker-compose.hostnet.yml  docker-compose.prod.yml  docker-compose.reverse-proxy.yml  docker-compose.yml  file_tree.txt  gunicorn_conf.py  pip-sync.sh  pyproject.toml  requirements.txt  run.sh  sanity-check.sh  setup.py
.devcontainer/: Dockerfile  devcontainer.json
EZ_Panel.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
ez_panel/: __init__.py  app.py  run.py  wsgi.py
ez_panel/static/css/: style.css
ez_panel/static/js/: cli.js  script.js
ez_panel/templates/: dashboard.html  index.html
ez_panel/utils/: network_scan.py  tasks.py
ez_panel/utils/data/: oui_prefixes.json
packaging/systemd/: ez-panel.service
reverse-proxy/: nginx.conf
scripts/: EZ-Panel  EZ_Panel  dev-venv.sh
tasks/: approved.yml
tests/: test_enhancements.py  test_network_scan.py
